2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($config_header_line, $ac_output_line)
	($ac_gettext_line, $package_version_line): Replace with...
	($config_header_location, $ac_output_location)
	($ac_gettext_location, $package_version_location): these.
	(&require_file_with_conf_line, &require_file_with_line): Remove,
	no longer used.

	
2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&require_file_internal): Instead of $file and $line,
	take $where as first argument.
	Adjust all callers.
	(&require_file_with_macro): New.
	Use it where internal black magic was used to recover the location
	of a macro definition.

	
2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file): Define and use `$here'.
	Avoid using am_line_error.

	
2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_target_error): New.
	Use it where appropriate instead of...
	(&am_line_error): this.
	Using it for a target is a croak error.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_macro_error): New.
	Use it where appropriate instead of...
	(&am_line_error): this.
	Using it for a macro is a croak error.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/asm.test: s/AC_PROG_AS/AM_PROG_AS/.
	AC_OUTPUT a Makefile.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (%var_line): Rename as...
	(%var_location): this.
	Use it consistently as the location where the macro is defined,
	file and line when possible, otherwise just file.
	(&read_am_file): Rules have their own location tracking, don't
	pollute %var_location.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (am_line_error): Clarify.

	
2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_print_error): Set $exit_status since all your
	users do.
	(&am_error, &am_file_error, &am_line_error, &am_conf_error):
	Don't.
	(&am_conf_line_error, &am_conf_line_warning): Remove.
	Adjust callers to use &am_file_error and...
	(&am_file_warning): new.
