@@ -1,5 +1,15 @@
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in ($seen_lispdir): Replace with...
+	($am_lispdir_location): this.
+	(&require_conf_file): New.
+	(&require_config_file, &require_conf_file_with_line,
+	(&require_conf_file_with_conf_line): Use it.
+	(&require_conf_file_with_macro): New.
+
+	
+2001-10-21  Akim Demaille  <akim@epita.fr>
+
 	* automake.in ($config_header_line, $ac_output_line)
 	($ac_gettext_line, $package_version_line): Replace with...
 	($config_header_location, $ac_output_location)
